feat/email attachment added

--- a/.env-example
+++ b/.env-example
@@ -7,3 +7,13 @@ DB_NAME =
 
 JWT_KEY= 
 
+
+PORT=3001
+DB_HOST =localhost
+DB_PORT =5432
+DB_USER =postgres
+DB_PASSWORD =12345678
+DB_NAME =local_01
+
+JWT_KEY= secret_key
+EMAIL_PASS=ayvq bdyf ygvv cbir
